--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ allure {
     autoconfigure = true
     aspectjweaver = true
     version = "2.13.6"
+    aspectjVersion = "1.9.6"
 
     clean = true
 
